Falta lógica de operadores

--- a/AngularCalculator/src/app/app.component.html
+++ b/AngularCalculator/src/app/app.component.html
@@ -33,9 +33,9 @@
       <button (click) = "keyPressed('00')">00</button>
     </div>
     <div class="col operators">
-      <button (click) = "keyPressed('C')">DEL</button>
+      <button (click) = "keyPressed('C')">C</button>
       <button (click) = "keyPressed('/')">/</button>
-      <button (click) = "keyPressed('*')">X</button>
+      <button (click) = "keyPressed('X')">X</button>
       <button (click) = "keyPressed('-')">-</button>
       <button (click) = "keyPressed('+')">+</button>
       <button (click) = "keyPressed('=')">=</button>
