--- a/AngularCalculator/src/app/app.component.html
+++ b/AngularCalculator/src/app/app.component.html
@@ -9,7 +9,7 @@
 <div class="container calculator">
   <div class="row container_operations">
     <div class="col operations">
-      <p>{{operations}}</p>
+      <p>{{operaciones}}</p>
     </div>
   </div>
   <div class="row container_total">
